update clear results button and styling

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <div class="input-group mb-3">
                             <div class="input-group-prepend">
                                 <span class="input-group-text">CPM</span>
-                                <span class="input-group-text">$0.00</span>
+                                <!-- <span class="input-group-text">$0.00</span> -->
                             </div>
                             <input type="number" id="cpm" class="form-control" step="0.01" aria-label="CPM Dollar amount (with dot and two decimal places)">
                         </div>
@@ -48,8 +48,8 @@
                     <div class="form-row">
                         <div class="input-group mb-3">
                             <div class="input-group-prepend">
-                                <span class="input-group-text">Media Cost</span>
-                                <span class="input-group-text">$0.00</span>
+                                <span class="input-group-text">Total Cost</span>
+                                <!-- <span class="input-group-text">$0.00</span> -->
                             </div>
                             <input type="number" id="mediacost" class="form-control" step="0.01" aria-label="Media Cost Dollar amount (with dot and two decimal places)">
                         </div>
