--- a/public/index.html
+++ b/public/index.html
@@ -17,12 +17,12 @@
         </div>
         <div class="row informationCopy">
             <div class="col text-center">
-                <p>Get the accurate number of impressions, clicks and media cost on a media plan.</p>
+                <p>Get the accurate number of impressions, clicks and the total cost on a media plan.</p>
             </div>
         </div>
         <div class="row">
-            <div class="col-2"></div>
-            <div class="col-8 text-center calculatorDisplay">
+            <div class="col-4"></div>
+            <div class="col-4 text-center calculatorDisplay">
                 <div class="warning"></div>
                 <form id="form">
                     <!-- Impressions -->
@@ -57,11 +57,12 @@
                     <button type="submit" id="calcSubmit" class="btn btn-primary">Submit</button>
                 </form>
             </div>
-            <div class="col-2"></div>
+            <div class="col-4"></div>
         </div>
         <!-- Calculator Results -->
         <div class="row">
-            <div class="col-12">
+            <div class="col-4"></div>
+            <div class="col-4">
                 <table class="table tabl-bordered table-hover">
                     <thead>
                         <tr>
@@ -74,6 +75,7 @@
                     </tbody>
                 </table>
             </div>
+            <div class="col-4"></div>
         </div>            
         <div class="row">
             <div class="col-12 text-center buttonholder">
