--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LDSXVZ7NMV"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-LDSXVZ7NMV');
+    </script>
 </head>
 
 <body>
@@ -19,7 +28,10 @@
         </div>
         <div class="row informationCopy">
             <div class="col text-center">
-                <p class="text-lg-left">CPM is CPM (cost per mille) is universal paid advertising purchasing standard where companies pay a price for every 1,000 impressions an ad receives. An “impression” refers to when someone sees a campaign. The calculator will allow you to retrieve an accurate values for impressions, CPM, or total spend on a modern media plan.</p>
+                <p class="text-lg-left">CPM is CPM (cost per mille) is universal paid advertising purchasing standard
+                    where companies pay a price for every 1,000 impressions an ad receives. An “impression” refers to
+                    when someone sees a campaign. The calculator will allow you to retrieve an accurate values for
+                    impressions, CPM, or total spend on a modern media plan.</p>
             </div>
         </div>
         <div class="row justify-content-center">
@@ -43,7 +55,7 @@
                         <!-- <div class="input-group-prepend">
                                 <span class="input-group-text">CPM</span>
                             </div>  -->
-                    <label for="cpmInput">CPM</label>
+                        <label for="cpmInput">CPM</label>
                         <input type="number" id="cpm" class="form-control" step="0.01"
                             aria-label="CPM Dollar amount (with dot and two decimal places)">
                     </div>
