--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                                 <span class="input-group-text">Impressions</span>
                             </div> -->
                         <label for="impressionInput">Impressions</label>
-                        <input type="number" id="impressions" class="form-control" aria-label="Impressions)">
+                        <input type="number" placeholder="Impressions" id="impressions" class="form-control" aria-label="Impressions)">
                     </div>
                     <!-- </div>  -->
                     <!-- CPM -->
@@ -56,8 +56,7 @@
                                 <span class="input-group-text">CPM</span>
                             </div>  -->
                         <label for="cpmInput">CPM</label>
-                        <input type="number" id="cpm" class="form-control" step="0.01"
-                            aria-label="CPM Dollar amount (with dot and two decimal places)">
+                        <input type="number" placeholder="CPM" id="cpm" class="form-control" step="0.01" aria-label="CPM Dollar amount (with dot and two decimal places)">
                     </div>
                     <!-- </div>  -->
                     <!-- Media Cost -->
@@ -67,11 +66,10 @@
                                 <span class="input-group-text">Total Cost</span>
                             </div> -->
                         <label for="costInput">Cost</label>
-                        <input type="number" id="mediacost" class="form-control" step="0.01"
-                            aria-label="Media Cost Dollar amount (with dot and two decimal places)">
+                        <input type="number" placeholder="Cost"  id="mediacost" class="form-control" step="0.01" aria-label="Media Cost Dollar amount (with dot and two decimal places)">
                     </div>
                     <!-- </div>  -->
-                    <button type="submit" id="calcSubmit" class="btn btn-primary">Submit</button>
+                    <button type="submit" id="calcSubmit" class="btn btn-success">Submit</button>
                 </form>
             </div>
             <div class="col-2"></div>
