--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
         </div>
         <div class="row">
             <div class="col">
-                <p class="text-lg-left" id="information">CPM (cost per mille) is a paid advertising buying standard. Companies pay a price for every 1,000 impressions an ad receives. An “impression” refers to when someone sees a campaign. The calculator will allow you to retrieve values for impressions, CPM, or the cost on a media plan.</p>
+                <p class="text-lg-left" id="information">CPM (cost per mille) is a paid advertising buying standard.
+                    Companies pay a price for every 1,000 impressions an ad receives. An “impression” refers to when
+                    someone sees a campaign. The calculator will allow you to retrieve values for impressions, CPM, or
+                    the cost on a media plan.</p>
             </div>
         </div>
         <div class="row justify-content-center">
-            <div class="col-2"></div>
-            <div class="col-6 text-center  calculatorDisplay">
+            <div class="col-6 text-center calculatorDisplay">
                 <div class="warning"></div>
                 <form id="form">
                     <!-- Impressions -->
@@ -43,7 +45,8 @@
                                 <span class="input-group-text">Impressions</span>
                             </div> -->
                         <label for="impressionInput">Impressions</label>
-                        <input type="number" placeholder="Impressions" id="impressions" class="form-control" aria-label="Impressions)">
+                        <input type="number" placeholder="Impressions" id="impressions" class="form-control"
+                            aria-label="Impressions)">
                     </div>
                     <!-- </div>  -->
                     <!-- CPM -->
@@ -53,7 +56,8 @@
                                 <span class="input-group-text">CPM</span>
                             </div>  -->
                         <label for="cpmInput">CPM</label>
-                        <input type="number" placeholder="CPM" id="cpm" class="form-control" step="0.01" aria-label="CPM Dollar amount (with dot and two decimal places)">
+                        <input type="number" placeholder="CPM" id="cpm" class="form-control" step="0.01"
+                            aria-label="CPM Dollar amount (with dot and two decimal places)">
                     </div>
                     <!-- </div>  -->
                     <!-- Media Cost -->
@@ -63,37 +67,36 @@
                                 <span class="input-group-text">Total Cost</span>
                             </div> -->
                         <label for="costInput">Cost</label>
-                        <input type="number" placeholder="Cost"  id="mediacost" class="form-control" step="0.01" aria-label="Media Cost Dollar amount (with dot and two decimal places)">
+                        <input type="number" placeholder="Cost" id="mediacost" class="form-control" step="0.01"
+                            aria-label="Media Cost Dollar amount (with dot and two decimal places)">
                     </div>
                     <!-- </div>  -->
                     <button type="submit" id="calcSubmit" class="btn btn-success">Submit</button>
                 </form>
             </div>
-            <div class="col-2"></div>
+            <div class="col-6">
+                <div class="mx-auto">
+                    <table class="table table-bordered table-hover">
+                        <thead>
+                            <tr>
+                                <th>Impressions</th>
+                                <th>CPM</th>
+                                <th>Media Cost</th>
+                            </tr>
+                        </thead>
+                        <tbody class="tabledata">
+                        </tbody>
+                    </table>
+                </div>
+                <div class="col-12 text-center buttonholder">
+                    <button class="btn bg-danger text-white clearResults">Clear Results</button>
+                </div>
+            </div>
         </div>
         <!-- Calculator Results -->
-        <div class="row ">
 
-            <div class="mx-auto">
-                <table class="table table-bordered table-hover">
-                    <thead>
-                        <tr>
-                            <th>Impressions</th>
-                            <th>CPM</th>
-                            <th>Media Cost</th>
-                        </tr>
-                    </thead>
-                    <tbody class="tabledata">
-                    </tbody>
-                </table>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12 text-center buttonholder">
-                <button class="btn bg-danger text-white clearResults">Clear Results</button>
-            </div>
-        </div>
-        
+
+
     </div>
     <footer class="footer fixed-bottom ">
         <div class="container text-left muted">
