switch to two column view on md devices w/ bootstrap

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div class="row justify-content-center">
-            <div class="col-6 text-center calculatorDisplay">
+            <div class="col-md-6 text-center calculatorDisplay">
                 <div class="warning"></div>
                 <form id="form">
                     <!-- Impressions -->
@@ -74,7 +74,7 @@
                     <button type="submit" id="calcSubmit" class="btn btn-success">Submit</button>
                 </form>
             </div>
-            <div class="col-6">
+            <div class="col-md-6">
                 <div class="mx-auto">
                     <table class="table table-bordered table-hover">
                         <thead>
